[package]
name = "locale-codes"
version = "0.2.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "locale-related codes/identifiers and any standards-based information concerning them."
documentation = "https://docs.rs/crate/locale-codes"
repository = "https://github.com/johnstonskj/locale-codes.git"
readme = "README.md"
license = "MIT"
keywords = ["locale", "POSIX"]
categories = ["internationalization", "localization"]

[dependencies]
lazy_static = "1.3.0"
log = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"